templates/k8s-local-dev-changes.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: asb
spec:
  ports:
    - name: port-1338
      port: 1338
      targetPort: 1338
      protocol: TCP
