templates/services.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ansible-service-broker

---
apiVersion: v1
kind: Service
labels:
   app: ansible-service-broker
   service: asb
metadata:
   name: asb
   namespace: ansible-service-broker
spec:
  ports:
    - name: port-1338
      port: 1338
  selector:
    app: ansible-service-broker
    service: asb

---
apiVersion: v1
kind: Service
metadata:
   name: etcd
   namespace: ansible-service-broker
spec:
  ports:
    - name: etcd-advertise
      port: 2379
  selector:
    app: ansible-service-broker
    service: etcd
